// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClientBrand (snapshot) > matches logo-uri snapshot 1`] = `
<div>
  <div
    aria-label="Signing in to Questrade"
    class="flex items-center gap-2.5"
    role="img"
  >
    <img
      alt=""
      class="shrink-0 rounded-lg object-contain"
      height="36"
      src="https://example.com/q.png"
      style="width: 36px; height: 36px;"
      width="36"
    />
    <span
      class="text-lg font-semibold tracking-tight text-foreground"
    >
      Questrade
    </span>
  </div>
</div>
`;

exports[`ClientBrand (snapshot) > matches monogram-fallback snapshot 1`] = `
<div>
  <div
    aria-label="Signing in to Athena"
    class="flex items-center gap-2.5"
    role="img"
  >
    <div
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center rounded-lg font-semibold bg-foreground text-background"
      style="width: 36px; height: 36px; font-size: 18px;"
    >
      A
    </div>
    <span
      class="text-lg font-semibold tracking-tight text-foreground"
    >
      Athena
    </span>
  </div>
</div>
`;
